<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.progmatic</groupId>
    <artifactId>JLeTrain</artifactId>
    <version>1.0.0-beta.5-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <slf4j.version>2.0.4</slf4j.version>
        <logback.version>1.6.3</logback.version>
        <junit.version>6.1.3</junit.version>
    </properties>

    <modules>
        <module>core</module>
        <module>ui-terminal</module>
        <module>ui-graphic</module>
        <module>launcher-terminal</module>
        <module>launcher-graphic</module>
        <module>launcher-check</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4</artifactId>
                <version>4.13.2</version>
            </dependency>
            <dependency>
                <groupId>com.kotcrab.vis</groupId>
                <artifactId>vis-ui</artifactId>
                <version>1.5.9</version>
            </dependency>
            <dependency>
                <groupId>com.googlecode.lanterna</groupId>
                <artifactId>lanterna</artifactId>
                <version>3.1.5</version>
            </dependency>        
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>5.23.0</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <!-- LibGDX -->
            <dependency>
                <groupId>com.badlogicgames.gdx</groupId>
                <artifactId>gdx</artifactId>
                <version>1.14.1</version>
            </dependency>
            <dependency>
                <groupId>com.badlogicgames.gdx</groupId>
                <artifactId>gdx-backend-lwjgl3</artifactId>
                <version>1.14.1</version>
            </dependency>
            <dependency>
                <groupId>com.badlogicgames.gdx</groupId>
                <artifactId>gdx-platform</artifactId>
                <version>1.14.1</version>
                <classifier>natives-desktop</classifier>
            </dependency>
            <dependency>
                <groupId>com.badlogicgames.gdx</groupId>
                <artifactId>gdx-freetype</artifactId>
                <version>1.14.1</version>
            </dependency>
            <dependency>
                <groupId>com.badlogicgames.gdx</groupId>
                <artifactId>gdx-freetype-platform</artifactId>
                <version>1.14.1</version>
                <classifier>natives-desktop</classifier>
            </dependency>

            <!-- Jackson for JSON Serialization -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>2.22.2</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jsr310</artifactId>
                <version>2.22.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>3.10.0</version>
                <configuration>
                    <java>
                        <eclipse>
                            <file>${maven.multiModuleProjectDirectory}/eclipse-java-google-style.xml</file>
                        </eclipse>
                        <removeUnusedImports/>
                    </java>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.2.0</version>
                <inherited>false</inherited>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>${maven.multiModuleProjectDirectory}/output</directory>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <release>17</release>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <propertiesEncoding>UTF-8</propertiesEncoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.6</version>
            </plugin>
        </plugins>
    </build>
</project>
